<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wavy"
    tools:context="com.eminiscegroup.eminisce.mainPageActivity">

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="167dp"
        android:layout_height="66dp"
        android:layout_marginStart="127dp"
        android:layout_marginBottom="16dp"
        android:onClick="confirmButton"
        android:text="@string/confirm_button"
        android:textSize="25sp"
        app:backgroundTint="#0954EA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        style="@android:style/Widget.Material.Light.ScrollView"
        android:layout_width="302dp"
        android:layout_height="0dp"
        android:background="@drawable/layout_border"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:scrollbarStyle="outsideInset"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/confirmButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.04000002">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/book_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/layout_border"
                android:textSize="20sp"
                android:visibility="visible" />
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="332dp"
        android:layout_height="51dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003">

        <EditText
            android:id="@+id/barcode_info"
            android:layout_width="170dp"
            android:layout_height="51dp"
            android:ems="10"
            android:hint="@string/enter_barcode"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/barcode_Info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/scanButton"
            android:layout_width="76dp"
            android:layout_height="49dp"
            android:layout_marginBottom="2dp"
            android:onClick="scanButton"
            android:text="@string/scanButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="76dp"
            android:layout_height="49dp"
            android:layout_marginBottom="2dp"
            android:onClick="addButton"
            android:text="@string/add_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/scanButton"
            app:layout_constraintStart_toEndOf="@+id/barcode_info"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/userID"
        android:layout_width="109dp"
        android:layout_height="34dp"
        android:text="(USER ID)"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.973"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="167dp"
        android:layout_height="57dp"
        android:text="@string/title_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/error_view"
        android:layout_width="333dp"
        android:layout_height="53dp"
        android:text="@string/error_view"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="99dp"
        android:layout_height="50dp"
        android:layout_marginStart="94dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="28dp"
        android:onClick="nextButton"
        android:text="NEXT"
        android:visibility="gone"
        app:backgroundTint="@android:color/holo_green_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toEndOf="@+id/confirmButton" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="28dp"
        android:onClick="cancelButton"
        android:text="Cancel"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/confirmButton"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sim_removebg_preview" />

</androidx.constraintlayout.widget.ConstraintLayout>